Dropdown fixed
dropdown was too close to the parent <a> but now looks better

--- a/bioone-draftcode/stylesheets/sass/bioone.scss
+++ b/bioone-draftcode/stylesheets/sass/bioone.scss
@@ -656,6 +656,7 @@ nav {
 			a {
 				color: $white;
 				text-decoration: none;
+				padding: 20px 0; 
 
 				&:hover {
 					color: $white; 
@@ -675,6 +676,7 @@ nav {
 
 			&:hover ul {
 				display: block;
+				top: 25px; 
 			}
 
 			ul {
@@ -710,6 +712,7 @@ nav .children {
 	width: 215px; 
 	padding: 0; 
 	left: 27%; 
+	z-index: 2; 
 
 	@include media-query(max, medium) { 
 		left: 16%; 
